inz - plugin + bib

--- a/semestr-vii/inz-tymon/main/02_04_API.md
+++ b/semestr-vii/inz-tymon/main/02_04_API.md
@@ -1,10 +1,10 @@
 ## API ##
 
-Ponieważ publikowanie projektu składa się z wielu etapów, każdy plik jest przesyłany osobno a w adresie URL jest informacja tylko o jednym artefakcie poprawne przypisanie afterkatu do projektu wymagałoby odczytywania odpowiedniego pliku POM przy każdym zapytania. Ponadto Maven nie udostępnia prostego sposobu autoryzacji użytkowników poprzez token. Obejściem tych ograniczeń okazało się wykorzystanie specjalnego adresu bazowego repozytorium. W przeciwieństwie do standardowych repozytoriów, ScalaJars wymaga podania specjalnego adresu URL zamierającego nazwę projektu oraz token użytkownika.
+Ponieważ publikowanie projektu składa się z wielu etapów, każdy plik jest przesyłany osobno, a w adresie URL jest informacja tylko o jednym artefakcie poprawne przypisanie afterkatu do projektu wymagałoby odczytywania odpowiedniego pliku POM przy każdym zapytaniu. Ponadto Maven nie udostępnia prostego sposobu autoryzacji użytkowników poprzez token. Obejściem tych ograniczeń okazało się wykorzystanie specjalnego adresu bazowego repozytorium. W przeciwieństwie do standardowych repozytoriów, ScalaJars wymaga podania specjalnego adresu URL zamierającego nazwę projektu oraz token użytkownika.
 
 Schemat adresu bazowego repozytorium do zapisu:
 
-```
+```bash
 http://scalajars.org/publish/nazwa-projektu/token/
 ```
 
@@ -12,7 +12,7 @@ Dzięki temu aplikacja nie musi sprawdzać plików POM przy każdym zapytaniu, w
 
 W przypadku sprawdzania dostępności i odczytu projektów przez standard Maven adres repozytorium jest bliższy standardowi:
 
-```
+```bash
 http://scalajars.org/repository/
 ```
 
