--- a/semestr-vii/inz-jacek/main.tex
+++ b/semestr-vii/inz-jacek/main.tex
@@ -250,6 +250,7 @@ Specjalność & \@specjalnosc\\
 
 \include{chapters/chapter01}
 \include{chapters/chapter02}
+\include{chapters/chapter03}
 
 
 \bibliographystyle{plalpha}
