--- a/semestr-vii/inz-jacek/main.tex
+++ b/semestr-vii/inz-jacek/main.tex
@@ -24,7 +24,7 @@
 %\usepackage{soul} % pakiet z komendami do podkreœlania tekstu
 %\usepackage{fourier} % pakiet zmieniaj¹cy czcionki na utopia
 \usepackage{times} % pakiet zmieniaj¹cy czcionki na times 
-
+\usepackage{pdflscape}
 %\usepackage{longtable}
 %\usepackage{ltxtable}
 %\usepackage{tabulary}
