--- a/semestr-vii/inz-jacek/main.tex
+++ b/semestr-vii/inz-jacek/main.tex
@@ -25,6 +25,7 @@
 %\usepackage{fourier} % pakiet zmieniaj¹cy czcionki na utopia
 \usepackage{times} % pakiet zmieniaj¹cy czcionki na times 
 \usepackage{pdflscape}
+\usepackage{listings}
 %\usepackage{longtable}
 %\usepackage{ltxtable}
 %\usepackage{tabulary}
