--- a/semestr-vii/inz-jacek/main.tex
+++ b/semestr-vii/inz-jacek/main.tex
@@ -232,7 +232,7 @@ Specjalność & \@specjalnosc\\
 \renewcommand{\cftchapterdotsep}{\cftdotsep}
 
 \begin{document}
-\title{Internetowy system wspomagania treningów    aerobowych z aplikacją mobilną}
+\title{Internetowy system wspomagania treningów aerobowych z aplikacją mobilną}
 \titleShort{Internetowy system wspomagania ...}
 \titleEN{Internet system for aerobic training with a mobile application}
 \author{Jacek Wieczorek}
@@ -252,6 +252,11 @@ Specjalność & \@specjalnosc\\
 \include{chapters/chapter01}
 \include{chapters/chapter02}
 \include{chapters/chapter03}
+\include{chapters/chapter04}
+\include{chapters/chapter05}
+\include{chapters/chapter06}
+\include{chapters/chapter07}
+\include{chapters/chapter08}
 
 
 \bibliographystyle{plalpha}
