--- a/semestr-vii/inz-jacek/main.tex
+++ b/semestr-vii/inz-jacek/main.tex
@@ -254,7 +254,7 @@ Specjalność & \@specjalnosc\\
 \include{chapters/chapter03}
 \include{chapters/chapter04}
 \include{chapters/chapter05}
-\include{chapters/chapter06}
+% \include{chapters/chapter06}
 \include{chapters/chapter07}
 \include{chapters/chapter08}
 
