--- a/semestr-vii/inz-jacek/main.tex
+++ b/semestr-vii/inz-jacek/main.tex
@@ -258,7 +258,7 @@ Specjalność & \@specjalnosc\\
 \include{chapters/chapter07}
 \include{chapters/chapter08}
 
-
+\nocite{*}
 \bibliographystyle{plalpha}
-
+\bibliography{bibliography}
 \end{document}
