--- a/semestr-vii/inz-jacek/bibliography.bib
+++ b/semestr-vii/inz-jacek/bibliography.bib
@@ -12,21 +12,21 @@
 	publisher = {Apress}
 }
 
-@Article{mic,
+@Misc{mic,
 	author = {Microsoft},
 	title = {http://msdn.microsoft.com/en-us/library/ms123401},
 	year = {2012},
 	publisher = {Microsoft}
 }
 
-@Article{android1,
+@Misc{android1,
 	author = {Android},
 	title = {http://developer.android.com/guide/components/index.html},
 	year = {2012},
 	publisher = {Android}
 }
 
-@Article{android2,
+@Misc{android2,
 	author = {Android},
 	title = {http://developer.android.com/reference/packages.html},
 	year = {2012},
