--- a/semestr-vii/sys-wbud/main.tex
+++ b/semestr-vii/sys-wbud/main.tex
@@ -47,8 +47,9 @@ Celem projektu było stworzenie systemu do obsługi balona meteorologicznego w o
 \begin{itemize}
   \item Komputer Raspberry PI w wersji z 256 MB pamięci RAM
   \item Karta pamięci SD o minimalnej wielkości 4GB
-  \item Odbiornik Bluetooth na USB
-  \item Odbiornik GPS komunikujący się po Bluetooth 
+  \item Odbiornik Bluetooth Bluetake BT007SX
+  \item Odbiornik GPS Navibe GPS GB735
+  \item PlayStation Eye
 \end{itemize}
 % section potrzebyn_sprz_t (end)
 
