--- a/semestr-vii/inz-jacek/bibliography.bib
+++ b/semestr-vii/inz-jacek/bibliography.bib
@@ -2,7 +2,7 @@
 	author = {Freeman, Adam and Sanderson, Steven},
 	title = {Pro ASP.NET MVC 3 Framework},
 	year = {2011},
-	publisher = {Wrox}
+	publisher = {Wiley Publishing, Inc.}
 }
 
 @Book{wcf1,
@@ -12,23 +12,52 @@
 	publisher = {Apress}
 }
 
-@Misc{mic,
-	author = {Microsoft},
-	title = {http://msdn.microsoft.com/en-us/library/ms123401},
-	year = {2012},
-	publisher = {Microsoft}
+
+@Book{csharp,
+	author = {Schild, Herbert },
+	title = {C\# 4.0 : The Complete Reference},
+	year = {2010},
+	publisher = {McGraw-Hill}
 }
 
-@Misc{android1,
-	author = {Android},
-	title = {http://developer.android.com/guide/components/index.html},
-	year = {2012},
-	publisher = {Android}
+@Book{wcf2,
+	author = {Cibaro, Pablo and Clayes, Kurt and Cozzolino, Fabio and Grabner, Johann},
+	title = {Professional WCF 4: Windows Communication Foundation in .NET 4.0},
+	year = {2010},
+	publisher = {Wiley Publishing, Inc.}
+}
+
+@Book{and1,
+	author = {Mednieks,Zigurd and Dornin, Laird and Meike, G. Blake and Nakamura, Masumi },
+	title = {Programming Android},
+	year = {2011},
+	publisher = {O'Reilly Media}
+}
+
+@Book{and2,
+	author = {Meier, Reto},
+	title = {Professional Android Application Development },
+	year = {2009},
+	publisher = {Wiley Publishing, Inc.}
+}
+
+@Misc{mic,
+	author = {Microsoft},
+	title  ={http://msdn.microsoft.com/en-us/library/ms123401},
+	year = {listopad 2012},
+	howpublished = {}
 }
 
 @Misc{android2,
 	author = {Android},
+	title = {http://developer.android.com/guide/components/index.html},
+	year = {listopad 2012},
+	howpublished = {}
+}
+
+@Misc{android1,
+	author = {Android},
 	title = {http://developer.android.com/reference/packages.html},
-	year = {2012},
-	publisher = {Android}
+	year = {listopad 2012},
+	howpublished = {}
 }
