--- a/semestr-vii/inz-jacek/main.tex
+++ b/semestr-vii/inz-jacek/main.tex
@@ -258,7 +258,9 @@ Specjalność & \@specjalnosc\\
 \include{chapters/chapter07}
 \include{chapters/chapter08}
 
-\nocite{*}
-\bibliographystyle{plalpha}
+
+\bibliographystyle{plain}
 \bibliography{bibliography}
+
+\nocite{*}
 \end{document}
