--- a/semestr-vii/inz-jacek/bibliography.bib
+++ b/semestr-vii/inz-jacek/bibliography.bib
@@ -41,6 +41,13 @@
 	publisher = {Wiley Publishing, Inc.}
 }
 
+@Book{azure,
+	author = {Jennings, Roger},
+	title = {Cloud Computing with the Windows Azure Platform},
+	year = {2009},
+	publisher = {Wiley Publishing, Inc.}
+}
+
 @Misc{mic,
 	author = {Microsoft},
 	title  ={http://msdn.microsoft.com/en-us/library/ms123401},
@@ -58,6 +65,52 @@
 @Misc{android1,
 	author = {Android},
 	title = {http://developer.android.com/reference/packages.html},
+	year = {listopad 2012},
+	howpublished = {}
+}
+
+@Misc{ef,
+	author = {Microsoft},
+	title = {http://msdn.microsoft.com/en-us/library/bb399572.aspx},
+	year = {listopad 2012},
+	howpublished = {}
+}
+@Misc{html5,
+	author = {w3schools},
+	title = {http://www.w3schools.com/html/html5\_intro.asp},
+	year = {listopad 2012},
+	howpublished = {}
+}
+
+@Misc{css3,
+	author = {w3schools},
+	title = {http://www.w3schools.com/css3/default.asp},
+	year = {listopad 2012},
+	howpublished = {}
+}
+
+@Misc{coffee,
+	author = {CoffeeScript},
+	title = {http://coffeescript.org/},
+	year = {listopad 2012},
+	howpublished = {}
+}
+@Misc{au,
+	author = {Bogard, Jimmy},
+	title = {https://github.com/AutoMapper/AutoMapper},
+	year = {listopad 2012},
+	howpublished = {}
+}
+
+@Misc{unity,
+	author = {Microsoft},
+	title = {http://msdn.microsoft.com/en-us/library/ff663144.aspx},
+	year = {listopad 2012},
+	howpublished = {}
+}
+@Misc{sql,
+	author = {Microsoft},
+	title = {http://msdn.microsoft.com/en-us/library/ms130214.aspx},
 	year = {listopad 2012},
 	howpublished = {}
 }
