inRZYGnierka last fix

--- a/semestr-vii/inz-jacek/bibliography.bib
+++ b/semestr-vii/inz-jacek/bibliography.bib
@@ -114,3 +114,10 @@
 	year = {listopad 2012},
 	howpublished = {}
 }
+
+@Misc{rp,
+	author = {Microsoft},
+	title = {http://msdn.microsoft.com/en-us/library/ff649690.aspx},
+	year = {listopad 2012},
+	howpublished = {}
+}
