--- a/semestr-vii/inz-tymon/main/title.tex
+++ b/semestr-vii/inz-tymon/main/title.tex
@@ -232,8 +232,8 @@ Specjalność & \@specjalnosc\\
 \renewcommand{\cftchapterdotsep}{\cftdotsep}
 
 \begin{document}
-\title{Repozytorium dla projektów OpenSource w języku Scala}
-\titleEN{Repository for OpenSource projects in Scala language}
+\title{System publikacji projektów open source dla języka Scala}
+\titleEN{Web based service for publication of open source projects in Scala}
 \author{Tymon Tobolski}
 \uczelnia{Politechnika Wrocławska}
 \wydzial{Wydział Elektroniki}
